--- a/index.html
+++ b/index.html
@@ -190,6 +190,85 @@
             </div>
             </div>
         </section>
+
+        <section class="about-section">
+            <div class="container">
+                <div class="about-content">
+                <div class="about-left">
+                    <span class="about-subtitle">О КОМПАНИИ</span>
+                    <h2>ООО ПТФ КАМА</h2>
+                    <p class="about-lead">
+                    Более 20 лет успешной работы в области антикоррозионной обработки металла
+                    </p>
+                    <p>
+                    Производственная площадка ООО ПТФ Кама — это современный цех со всем
+                    необходимым оборудованием для предоставления услуг по защите металлических изделий
+                    от коррозии химическим и электрохимическим и другими методами.
+                    </p>
+
+                    <ul class="about-list">
+                    <li>Полный цикл работ по металлопокрытию;</li>
+                    <li>Высокая производительность;</li>
+                    <li>Покрытие изделий длиной до 4 метров;</li>
+                    <li>Высококачественное сырьё;</li>
+                    <li>Оптимальная стоимость;</li>
+                    <li>Соответствие экологическим, санитарно-эпидемиологическим требованиям.</li>
+                    </ul>
+
+                    <a href="#" class="about-btn">Подробнее</a>
+                </div>
+
+                <div class="about-right">
+                </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="application-section">
+  <div class="container">
+    <div class="section-header">
+      <span class="subtitle">ЦИНКОВАНИЕ</span>
+      <h2>ОБЛАСТЬ ПРИМЕНЕНИЯ</h2>
+      <p>
+        Мы специализируемся на нанесении покрытий на разнообразные изделия из стали и чугуна, включая:
+      </p>
+    </div>
+
+    <div class="icons-grid">
+      <div class="icon-item">
+        <div class="hex"><img src="img/svg1.svg" alt=""></div>
+        <p>Крепёжные элементы<br>(механизмы)</p>
+      </div>
+      <div class="icon-item">
+        <div class="hex"><img src="img/svg2.svg" alt=""></div>
+        <p>Мебельная<br>фурнитура</p>
+      </div>
+      <div class="icon-item">
+        <div class="hex"><img src="img/svg3.svg" alt=""></div>
+        <p>Детали машин и<br>механизмов</p>
+      </div>
+      <div class="icon-item">
+        <div class="hex"><img src="img/svg4.svg" alt=""></div>
+        <p>Сгоны и<br>отводы</p>
+      </div>
+      <div class="icon-item">
+        <div class="hex"><img src="img/svg5.svg" alt=""></div>
+        <p>Изделия из<br>горячекатаной стали</p>
+      </div>
+      <div class="icon-item">
+        <div class="hex"><img src="img/svg6.svg" alt=""></div>
+        <p>Фланцы и<br>фитинги</p>
+      </div>
+      <div class="icon-item">
+        <div class="hex"><img src="img/svg7.svg" alt=""></div>
+        <p>Сетки</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
         <section class="services">
             <div class="swiper">
                 <div class="title">
