--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
             </div>
             <ul class="mobile_list">
                 <li class="mobile_nav_item">
-                    <a href="#service" class="mobile_nav_links ">Гальванические покрытие</a>
+                    <a href="#service" class="mobile_nav_links ">О компаниие</a>
                 </li>
                 <li class="mobile_nav_item">
-                    <a href="#coating" class="mobile_nav_links">Виды наносимых покрытий</a>
+                    <a href="#coating" class="mobile_nav_links">Виды покрытий</a>
                 </li>
                 <li class="mobile_nav_item">
-                    <a href="#price" class="mobile_nav_links">Цены</a>
+                    <a href="#price" class="mobile_nav_links">Прайс-лист</a>
                 </li>
                 <li class="mobile_nav_item">
-                    <a href="#gallery" class="mobile_nav_links">Наши работы</a>
+                    <a href="#gallery" class="mobile_nav_links">Галерея</a>
                 </li>
                 <li class="mobile_nav_item">
                     <a href="" class="mobile_nav_links">Контакты
@@ -57,7 +57,7 @@
 
                 <li class="mobile_nav_item">
                     <button class="mobile_getQuete modalBtn" data-btn="1" type="button">
-                        <span>Получить консультацию</span>
+                        <span>Оставить заявку</span>
                     </button>
                 </li>
 
@@ -78,18 +78,18 @@
                     <ul class="nav-center">
                         <li>
                             <a href="#service">
-                                <span>Гальванические покрытие</span>
+                                <span>О компаниие</span>
                             </a>
                         </li>
-                        <li><a href="#coating"><span>Виды наносимых покрытий</span></a></li>
+                        <li><a href="#coating"><span>Виды покрытий</span></a></li>
                         <li>
                             <a href="#price">
-                                <span>Цены</span>
+                                <span>Прайс-лист</span>
                             </a>
                         </li>
                         <li>
                             <a href="#gallery">
-                                <span>Наши работы</span>
+                                <span>Галерея</span>
                             </a>
                         </li>
                         <li>
@@ -115,7 +115,7 @@
                     <div class="subsub">пн-пт:&nbsp;9:00-18:00</div>
                     </div>
                     <div class="callAction">
-                        <button class="modalBtn" data-btn="1">Получить консультацию</button>
+                        <button class="modalBtn" data-btn="1">Оставить заявку</button>
                     </div>
 
 
@@ -155,12 +155,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
                 </svg>
                 </a>
-                <a href="#" class="btn btn-outline">
-                Получить Консультацию
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
-                </svg>
-                </a>
+                
             </div>
             </div>
 
@@ -258,7 +253,7 @@
             <div class="swiper">
                 <div class="title">
                 <div>
-                <h2>Описание гальванических покрытий</h2>
+                <h2>Виды покрытий</h2>
                 </div>
                 <div class="swiper-nav-top">
                 <div class="swiper-button-prev"></div>
@@ -274,11 +269,11 @@
                     <div class="slide-content">
                         <h3>Цинкование</h3> 
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat nostrum eaque reprehenderit odit ab excepturi nihil assumenda doloremque rerum et.</p>
-                        <a href="#" class="slide-btn"> Подробнее
+                        <!-- <a href="#" class="slide-btn"> Подробнее
                         <svg
                          xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="40" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve" class="hovered-paths"><g><path d="m506.134 241.843-.018-.019-104.504-104c-7.829-7.791-20.492-7.762-28.285.068-7.792 7.829-7.762 20.492.067 28.284L443.558 236H20c-11.046 0-20 8.954-20 20s8.954 20 20 20h423.557l-70.162 69.824c-7.829 7.792-7.859 20.455-.067 28.284 7.793 7.831 20.457 7.858 28.285.068l104.504-104 .018-.019c7.833-7.818 7.808-20.522-.001-28.314z" fill="#000000" opacity="1" data-original="#000000" class="hovered-path"></path></g>
                         </svg>
-                        </a>
+                        </a> -->
                     </div>
                     </div>
                 </div>
@@ -288,11 +283,11 @@
                     <div class="slide-content">
                         <h3>Цинкование</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum excepturi molestiae delectus minima? Expedita eligendi consequatur soluta ut beatae esse!</p>
-                        <a href="#" class="slide-btn"> Подробнее
+                        <!-- <a href="#" class="slide-btn"> Подробнее
                         <svg
                          xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="40" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve" class="hovered-paths"><g><path d="m506.134 241.843-.018-.019-104.504-104c-7.829-7.791-20.492-7.762-28.285.068-7.792 7.829-7.762 20.492.067 28.284L443.558 236H20c-11.046 0-20 8.954-20 20s8.954 20 20 20h423.557l-70.162 69.824c-7.829 7.792-7.859 20.455-.067 28.284 7.793 7.831 20.457 7.858 28.285.068l104.504-104 .018-.019c7.833-7.818 7.808-20.522-.001-28.314z" fill="#000000" opacity="1" data-original="#000000" class="hovered-path"></path></g>
                         </svg>
-                        </a>
+                        </a> -->
                     </div>
                     </div>
                 </div>
@@ -302,11 +297,11 @@
                     <div class="slide-content">
                         <h3>Цинкование</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores debitis reiciendis voluptas beatae voluptatem possimus ipsa sint eius aut officiis.</p>
-                        <a href="#" class="slide-btn"> Подробнее
+                        <!-- <a href="#" class="slide-btn"> Подробнее
                         <svg
                          xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="40" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve" class="hovered-paths"><g><path d="m506.134 241.843-.018-.019-104.504-104c-7.829-7.791-20.492-7.762-28.285.068-7.792 7.829-7.762 20.492.067 28.284L443.558 236H20c-11.046 0-20 8.954-20 20s8.954 20 20 20h423.557l-70.162 69.824c-7.829 7.792-7.859 20.455-.067 28.284 7.793 7.831 20.457 7.858 28.285.068l104.504-104 .018-.019c7.833-7.818 7.808-20.522-.001-28.314z" fill="#000000" opacity="1" data-original="#000000" class="hovered-path"></path></g>
                         </svg>
-                        </a>
+                        </a> -->
                     </div>
                     </div>
                 </div>
@@ -316,11 +311,11 @@
                     <div class="slide-content">
                         <h3>Цинкование</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quibusdam veritatis labore repellendus fuga excepturi, facilis accusamus atque ab ratione.</p>
-                        <a href="#" class="slide-btn"> Подробнее
+                        <!-- <a href="#" class="slide-btn"> Подробнее
                         <svg
                          xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="40" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve" class="hovered-paths"><g><path d="m506.134 241.843-.018-.019-104.504-104c-7.829-7.791-20.492-7.762-28.285.068-7.792 7.829-7.762 20.492.067 28.284L443.558 236H20c-11.046 0-20 8.954-20 20s8.954 20 20 20h423.557l-70.162 69.824c-7.829 7.792-7.859 20.455-.067 28.284 7.793 7.831 20.457 7.858 28.285.068l104.504-104 .018-.019c7.833-7.818 7.808-20.522-.001-28.314z" fill="#000000" opacity="1" data-original="#000000" class="hovered-path"></path></g>
                         </svg>
-                        </a>
+                        </a> -->
                     </div>
                     </div>
                 </div>
@@ -332,11 +327,11 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt accusamus quibusdam architecto dolor numquam quae. Voluptates suscipit reiciendis perferendis. Ipsa.
                         </p>
-                        <a href="#" class="slide-btn"> Подробнее
+                        <!-- <a href="#" class="slide-btn"> Подробнее
                         <svg
                          xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="40" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve" class="hovered-paths"><g><path d="m506.134 241.843-.018-.019-104.504-104c-7.829-7.791-20.492-7.762-28.285.068-7.792 7.829-7.762 20.492.067 28.284L443.558 236H20c-11.046 0-20 8.954-20 20s8.954 20 20 20h423.557l-70.162 69.824c-7.829 7.792-7.859 20.455-.067 28.284 7.793 7.831 20.457 7.858 28.285.068l104.504-104 .018-.019c7.833-7.818 7.808-20.522-.001-28.314z" fill="#000000" opacity="1" data-original="#000000" class="hovered-path"></path></g>
                         </svg>
-                        </a>
+                        </a> -->
                     </div>
                     </div>
                 </div>
@@ -346,11 +341,11 @@
                     <div class="slide-content">
                         <h3>Цинкование</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, quo cumque. Inventore ipsum impedit nostrum aut illum a, dolorem non.</p>
-                        <a href="#" class="slide-btn"> Подробнее
+                        <!-- <a href="#" class="slide-btn"> Подробнее
                         <svg
                          xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="40" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve" class="hovered-paths"><g><path d="m506.134 241.843-.018-.019-104.504-104c-7.829-7.791-20.492-7.762-28.285.068-7.792 7.829-7.762 20.492.067 28.284L443.558 236H20c-11.046 0-20 8.954-20 20s8.954 20 20 20h423.557l-70.162 69.824c-7.829 7.792-7.859 20.455-.067 28.284 7.793 7.831 20.457 7.858 28.285.068l104.504-104 .018-.019c7.833-7.818 7.808-20.522-.001-28.314z" fill="#000000" opacity="1" data-original="#000000" class="hovered-path"></path></g>
                         </svg>
-                        </a>
+                        </a> -->
                     </div>
                     </div>
                 </div>
@@ -361,10 +356,10 @@
             </div>
         </section>
 
-        <section class="coatings" id="coating">
+        <!-- <section class="coatings" id="coating">
             <div class="container">
                 <div class="section-title">
-                <h2>Виды наносимых покрытий</h2>
+                <h2>Виды покрытий</h2>
                 </div>
 
                 <div class="coatings-grid">
@@ -418,12 +413,12 @@
 
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="pricing" id="price">
             <div class="container">
                 <div class="pricing-title">
-                <h2>Цены</h2>
+                <h2>Таблица Cтоимости</h2>
                 </div>
 
                 <div class="pricing-table-wrapper">
@@ -457,10 +452,17 @@
                 </div>
 
                 <div class="pricing-notes">
-                <p><strong>Внимание!</strong> Минимальная стоимость нанесения покрытия — <strong>5000 руб.</strong></p>
-                <p>Изделия на нанесения покрытия принимаются в соответствии с ГОСТ ******.</p>
-                <p>В случае присутствия на деталях следов коррозии, консервационных смазок — <strong>+30% к стоимости.</strong></p>
-                </div>
+  <div class="pricing-table-notes">
+    <p><strong>Внимание!</strong> Минимальная стоимость нанесения покрытия — 
+      <strong>5000 руб.</strong>
+    </p>
+    <p>Изделия на нанесения покрытия принимаются в соответствии с ГОСТ ******.</p>
+  </div>
+
+  <p>В случае присутствия на деталях следов коррозии, консервационных смазок — 
+    <strong class="extra-chip">+30% к стоимости.</strong>
+  </p>
+</div>
             </div>
         </section>
         
@@ -621,11 +623,11 @@
                                     <div class="footer-right-content">
                                         <h4>О компании</h4>
                                         <ul class="footer-right-links">
-                                            <li><a href="#service">Гальванические покрытие</a></li>
-                                            <li><a href="#coating">Виды наносимых покрытий</a></li>
-                                            <li><a href="#price">Цены</a></li>
+                                            <li><a href="#service">О компаниие</a></li>
+                                            <li><a href="#coating">Виды покрытий</a></li>
+                                            <li><a href="#price">Прайс-лист</a></li>
                                             <!--<li><a href="/servis/">Servis</a></li>-->
-                                            <li><a href="#gallery">Наши работы</a></li>
+                                            <li><a href="#gallery">Галерея</a></li>
                                             <li><a target="_blank" href="https://t.me/galvatech">Контакты</a></li>
                                         </ul>
                                     </div>
