--- a/index.html
+++ b/index.html
@@ -507,6 +507,59 @@
 </div>
             </div>
         </section>
+
+        <section class="contact-page section-padding mt-0">
+      <div class="container" bis_skin_checked="1">
+        <div class="row" bis_skin_checked="1">
+          <div class="col-lg-6" bis_skin_checked="1">
+            <div class="contact-box" bis_skin_checked="1">
+              <figure class="text-center">
+                <img src="/img/galvalogo.webp" width="250" alt="" class="mb-0" style="filter:brightness(9999)">
+              </figure>
+              <article>
+                <hr>
+                <ul>
+                  <li class="fs-5 mb-3">
+                    <a href="mailto:info@galva-tech.ru">
+                        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M467 76H45C20.238 76 0 96.149 0 121v270c0 24.86 20.251 45 45 45h422c24.762 0 45-20.149 45-45V121c0-24.857-20.248-45-45-45zm-6.91 30L267.624 299.094c-5.864 5.882-17.381 5.886-23.248 0L51.91 106h408.18zM30 385.485v-258.97L159.065 256 30 385.485zM51.91 406l128.334-128.752 42.885 43.025c17.574 17.631 48.175 17.624 65.743 0l42.885-43.024L460.09 406H51.91zM482 385.485 352.935 256 482 126.515v258.97z" fill="#fff" opacity="1" data-original="#fff" class=""></path></g></svg>
+                        info@galva-tech.ru
+                    </a>
+                  </li>
+                  <li class="fs-5 mb-3">
+                    <a target="_blank" href="https://wa.me/79055556025" class="text-white">
+                                <svg
+                                 xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="m17.507 14.307-.009.075c-2.199-1.096-2.429-1.242-2.713-.816-.197.295-.771.964-.944 1.162-.175.195-.349.21-.646.075-.3-.15-1.263-.465-2.403-1.485-.888-.795-1.484-1.77-1.66-2.07-.293-.506.32-.578.878-1.634.1-.21.049-.375-.025-.524-.075-.15-.672-1.62-.922-2.206-.24-.584-.487-.51-.672-.51-.576-.05-.997-.042-1.368.344-1.614 1.774-1.207 3.604.174 5.55 2.714 3.552 4.16 4.206 6.804 5.114.714.227 1.365.195 1.88.121.574-.091 1.767-.721 2.016-1.426.255-.705.255-1.29.18-1.425-.074-.135-.27-.21-.57-.345z" fill="#fff" opacity="1" data-original="#fff"></path><path d="M20.52 3.449C12.831-3.984.106 1.407.101 11.893c0 2.096.549 4.14 1.595 5.945L0 24l6.335-1.652c7.905 4.27 17.661-1.4 17.665-10.449 0-3.176-1.24-6.165-3.495-8.411zm1.482 8.417c-.006 7.633-8.385 12.4-15.012 8.504l-.36-.214-3.75.975 1.005-3.645-.239-.375c-4.124-6.565.614-15.145 8.426-15.145a9.865 9.865 0 0 1 7.021 2.91 9.788 9.788 0 0 1 2.909 6.99z" fill="#fff" opacity="1" data-original="#fff"></path></g>
+                        </svg>
+                         +7 905 555 60 25
+                    </a>
+                  </li>
+                
+                  <li class="fs-5 mb-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="Outline" viewBox="0 0 24 24" width="20" fill="currentColor" height="20">
+                                                        <path d="M12,6a4,4,0,1,0,4,4A4,4,0,0,0,12,6Zm0,6a2,2,0,1,1,2-2A2,2,0,0,1,12,12Z">
+                                                        </path>
+                                                        <path d="M12,24a5.271,5.271,0,0,1-4.311-2.2c-3.811-5.257-5.744-9.209-5.744-11.747a10.055,10.055,0,0,1,20.11,0c0,2.538-1.933,6.49-5.744,11.747A5.271,5.271,0,0,1,12,24ZM12,2.181a7.883,7.883,0,0,0-7.874,7.874c0,2.01,1.893,5.727,5.329,10.466a3.145,3.145,0,0,0,5.09,0c3.436-4.739,5.329-8.456,5.329-10.466A7.883,7.883,0,0,0,12,2.181Z">
+                                                        </path>
+                                                    </svg>
+                    <span>Московская область, г.о. Солнечногорск, пгт. Андреевка, д.31в</span>
+                  </li>
+                  <li class="fs-5 mb-3">
+                    <svg id="Layer_1" height="20" viewBox="0 0 24 24" fill="currentColor" width="20" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1">
+                                                        <path d="m24 12a1 1 0 0 1 -2 0 10.011 10.011 0 0 0 -10-10 1 1 0 0 1 0-2 12.013 12.013 0 0 1 12 12zm-8 1a1 1 0 0 0 0-2h-2.277a2 2 0 0 0 -.723-.723v-3.277a1 1 0 0 0 -2 0v3.277a1.994 1.994 0 1 0 2.723 2.723zm-14.173-6.216a1 1 0 1 0 1 1 1 1 0 0 0 -1-1zm.173 5.216a1 1 0 1 0 -1 1 1 1 0 0 0 1-1zm10 10a1 1 0 1 0 1 1 1 1 0 0 0 -1-1zm-7.779-18.793a1 1 0 1 0 1 1 1 1 0 0 0 -1-1zm3.558-2.366a1 1 0 1 0 1 1 1 1 0 0 0 -1-1zm-5.952 14.375a1 1 0 1 0 1 1 1 1 0 0 0 -1-1zm2.394 3.577a1 1 0 1 0 1 1 1 1 0 0 0 -1-1zm3.558 2.366a1 1 0 1 0 1 1 1 1 0 0 0 -1-1zm14.394-5.943a1 1 0 1 0 1 1 1 1 0 0 0 -1-1zm-2.394 3.577a1 1 0 1 0 1 1 1 1 0 0 0 -1-1zm-3.558 2.366a1 1 0 1 0 1 1 1 1 0 0 0 -1-1z">
+                                                        </path>
+                                                    </svg>
+                    <span>Режим работы пн-пт 9:00-18:00 </span>
+                  </li>
+                </ul>
+              </article>
+            </div>
+          </div> 
+          <div class="col-lg-6" id="map">
+          </div>
+            <!-- <div id="map"></div> -->
+        </div>
+      </div>
+    </section>
         
        <section class="projects gallery" id="gallery">
         <div class="section-title">
@@ -770,6 +823,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="jquery.min.js"></script>
 <script src="owlcarousel/owl.carousel.min.js"></script>
+<script src="https://kit.fontawesome.com/6e8461733e.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
@@ -834,7 +888,40 @@
       ]
     }
   });
+  
 
+  </script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+<script type="text/javascript">
+    ymaps.ready(init);
+
+    function init() {
+      var myMap = new ymaps.Map("map", {
+        center: [40.39261938417404, 49.84279483068511],
+        zoom: 15
+      });
+
+
+      myMap.geoObjects.add(
+        new ymaps.Placemark(
+          [40.39261938417404, 49.84279483068511],
+          {},
+          {
+            iconLayout: "default#image",
+            iconImageHref: "/assets/img/marker.png",
+          }
+        )
+      );
+      myMap.controls.remove("geolocationControl"); // удаляем геолокацию
+      myMap.controls.remove("searchControl"); // удаляем поиск
+      myMap.controls.remove("trafficControl"); // удаляем контроль трафика
+      myMap.controls.remove("typeSelector"); // удаляем тип
+      myMap.controls.remove("fullscreenControl"); // удаляем кнопку перехода в полноэкранный режим
+      myMap.behaviors.disable("scrollZoom");
+      //   map.controls.remove('zoomControl'); // удаляем контрол зуммирования
+      myMap.controls.remove("rulerControl"); // удаляем контрол правил
+      // map.behaviors.disable(['scrollZoom']); // отключаем скролл карты (опционально)
+    }
   </script>
 </body>
 </html>
